--- a/misinformation-classifier/.gitignore
+++ b/misinformation-classifier/.gitignore
@@ -5,30 +5,82 @@ __pycache__/
 *.pyd
 .Python
 *.so
+*.egg
+*.egg-info/
+dist/
+build/
+eggs/
+parts/
+sdist/
+develop-eggs/
+.installed.cfg
+pip-log.txt
+pip-delete-this-directory.txt
 
 # Virtual environments
+.venv/
 venv/
 env/
 .env
+ENV/
 
 # Jupyter Notebook
-.ipynb_checkpoints
+.ipynb_checkpoints/
+*.ipynb_checkpoints
 
-# Model files and results
+# Model files and results (large files)
 results/
 *.pt
 *.pth
 *.pkl
+*.bin
+*.safetensors
+*.onnx
+*.h5
+
+# HuggingFace cache
+.cache/
+~/.cache/huggingface/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
 
 # OS
 .DS_Store
+.DS_Store?
+._*
 Thumbs.db
+ehthumbs.db
+Desktop.ini
 
 # Logs
 *.log
+logs/
+
+# Data files (if large - uncomment if needed)
+# *.json
+# *.csv
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*~
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+
+# pytest
+.pytest_cache/
+
+# mypy
+.mypy_cache/
